# stormsinger

./: .clang-format  .clangd  .gitattributes  .gitignore  Build  Build.bat  Build.sh  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  README.md  Stormsinger.cpp  Stormsinger.h  TODO.md
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
.github/workflows/: build-test.yml  builds.yml  cmake-multi-platform.yml  create-badges.yml
Abyssguard/: Abyssguard.c  Abyssguard.cpp  CMakeLists.txt  Chainbinder.cfg  README.md
Assets/Shaders/: default.vert
Chainbinder/: CMakeLists.txt  Chainbinder.c  Chainbinder.h  README.md
Chainbinder/Include/: Definitions.h  Logging.h  Reporting.h  Window.h
Chainbinder/Include/Config/: Parser.h
Chainbinder/Include/Vulkan/: Context.h  Definitions.h  Device.h
Chainbinder/Source/: Chainbinder.c  Files.c  Logging.c  Reporting.c  Window.c
Chainbinder/Source/Config/: Parser.c
Chainbinder/Source/Vulkan/: Context.c  Device.c
Chainbinder/Steelblade/: CMakeLists.txt  Steelblade.c  Steelblade.h
Include/: Vulkan.h  Window.h  Windowing.h
Include/Vulkan/: Device.h  Pipeline.h  Surface.h  Swapchain.h
Include/Vulkan/Surface/: Wayland.h
Include/Window/: Wayland.h
Include/Window/Wayland/: Compositor.h  Output.h  Registry.h  Shell.h
Include/Windowing/: Wayland.h
Lightbleeder/: CMakeLists.txt  README.md
Lightbleeder/Include/: Window.hpp
Lightbleeder/Source/: Window.cpp
Modules/: FindScanner.cmake  FindWayland.cmake  Helpers.cmake
Modules/Protocols/: xdg-shell.xml
Source/: Entry.c  Entrypoint.c  Vulkan.c  Window.c  Windowing.c
Source/Vulkan/: Device.c  Pipeline.c  Surface.c  Swapchain.c
Source/Vulkan/Surface/: Wayland.c
Source/Window/: Wayland.c
Source/Window/Wayland/: Compositor.c  Output.c  Registry.c  Shell.c
Source/Windowing/: Wayland.c
Source/Windowing/Wayland/: Compositor.c  Registry.c  Shell.c
Sunbringer/: CMakeLists.txt  README.md  Sunbringer.c  Sunbringer.cpp  Sunbringer.h
