set(LIGHTBLEEDER_SOURCES "Source/Lightbleeder.cpp" "Source/Window.cpp")
set(LIGHTBLEEDER_HEADERS "Include/Lightbleeder.hpp" "Source/Window.cpp")

add_library(Lightbleeder STATIC ${LIGHTBLEEDER_SOURCES} ${LIGHTBLEEDER_HEADERS})

if(MSVC)
	target_compile_options(Lightbleeder PRIVATE /Wall)
	if(CMAKE_BUILD_TYPE STREQUAL "Debug")
		target_compile_options(Lightbleeder PRIVATE /Od)
	else()
		target_compile_options(Lightbleeder PRIVATE /O2)
	endif()
else()
	target_compile_options(Lightbleeder PRIVATE -Wall -Wextra -Werror -Wpedantic)
	# TODO: Add more options when next on Linux machine.
	if(CMAKE_BUILD_TYPE STREQUAL "Debug")
		target_compile_options(Lightbleeder PRIVATE -O0 -g)
	else()
		target_compile_options(Lightbleeder PRIVATE -O3)
	endif()
endif()

add_dependencies(Lightbleeder glfw)
target_include_directories(Lightbleeder PRIVATE "Include")
target_link_libraries(Lightbleeder PUBLIC glfw3)
